--- a/glearn/core-java/core-java.gradle
+++ b/glearn/core-java/core-java.gradle
@@ -19,5 +19,9 @@ dependencies {
     implementation "ch.qos.logback:logback-core:${logbackVersion}"
     implementation "ch.qos.logback:logback-access:${logbackVersion}"
 	
-	testImplementation junit
+	testImplementation junit_jupiter_api
+	testImplementation junit_jupiter_engine
+	testImplementation junit_platform_runner
+
 }
+
