--- a/glearn/core-java/core-java.gradle
+++ b/glearn/core-java/core-java.gradle
@@ -22,6 +22,8 @@ dependencies {
 	testImplementation junit_jupiter_api
 	testImplementation junit_jupiter_engine
 	testImplementation junit_platform_runner
-
 }
 
+test {
+    useJUnitPlatform()
+}
