--- a/frameworks/settings.gradle
+++ b/frameworks/settings.gradle
@@ -7,6 +7,7 @@ include 'springboot'
 include 'lucence'
 include 'netty'
 include 'flowable'
+include 'gateway'
 
 // spring cloud
 include ':springcloud:eureka-server'
