--- a/frameworks/springboot/springboot.gradle
+++ b/frameworks/springboot/springboot.gradle
@@ -53,6 +53,7 @@ bootJar.doFirst {
 	//	TODO 可以考虑动态修改配置文件
 }
 
+// 打包可执行Jar
 jar {
 	manifest {
 		attributes "Manifest-Version": 1.0,
@@ -60,6 +61,7 @@ jar {
 	}
 }
 
+// 自定义打包，包含配置文件
 task buildTestPackage(type: Zip, dependsOn: bootJar) {
 	// println "rootDir >> $rootDir"
 	// println "projectDir >> $projectDir"
