feat: core java learn

--- a/glearn/third-part-jars/third-part-jars.gradle
+++ b/glearn/third-part-jars/third-part-jars.gradle
@@ -42,5 +42,11 @@ dependencies {
 
 	compileOnly javax_servlet_api
 
-	testImplementation junit
+	testImplementation junit_jupiter_api
+	testImplementation junit_jupiter_engine
+	testImplementation junit_platform_runner
+}
+
+test {
+	useJUnitPlatform()
 }
