--- a/practice/backend/resource-service/src/main/resources/application.yml
+++ b/practice/backend/resource-service/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 server:
   port: 8082
 
-spring:
-  profiles:
-    active: dev
-
 # 爬虫库资源
 crawler:
   ds:
     host: localhost
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://${crawler.ds.host}:3306/db_crawler?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://%s:3306/db_crawler?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
     userName: root
     password: root
+
+local:
+  file: /config-center/local.properties
