--- a/practice/backend/resource-service/resource-service.gradle
+++ b/practice/backend/resource-service/resource-service.gradle
@@ -25,6 +25,6 @@ dependencies {
     implementation 'org.mybatis:mybatis-typehandlers-jsr310:1.0.2'
     implementation(javax_persistence) { force = true }
     implementation persistence_api
-
+    implementation opencsv
 
 }
