feat: 读取本地配置文件及入库

--- a/practice/backend/resource-service/src/main/resources/application.yml
+++ b/practice/backend/resource-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ crawler:
     userName: root
     password: root
   csv:
-    fileDir: D:/ftx_new_house_20211108.csv
+    fileDir: /root/data
 
 local:
   file: /config-center/local.properties
