fix: 价格字段优化处理

--- a/practice/backend/resource-service/resource-service.gradle
+++ b/practice/backend/resource-service/resource-service.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation persistence_api
     implementation opencsv
 
+    testImplementation spring_boot_starter_test
 }
