--- a/practice/backend/resource-service/resource-service.gradle
+++ b/practice/backend/resource-service/resource-service.gradle
@@ -1,10 +1,17 @@
 plugins {
-    id 'java'
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
 }
 
 apply plugin: 'cn.gyw.platform.plugin.mbg'
+
+// 热部署
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
 
 dependencies {
     implementation project(':components:common-web')
@@ -14,6 +21,7 @@ dependencies {
 
     implementation spring_boot_starter
     implementation spring_boot_starter_web
+    developmentOnly spring_boot_devtools
 
     // DB
     implementation mysql_connector_java
