--- a/practice/backend/instant-messaging/instant-messaging.gradle
+++ b/practice/backend/instant-messaging/instant-messaging.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'java'
+}
+
 dependencies {
     implementation platform_common
 
@@ -17,15 +21,20 @@ dependencies {
     implementation "io.lettuce:lettuce-core:5.0.4.RELEASE"
 
     implementation mysql_connector_java
-	implementation 'org.json:json:20190722'
+    implementation 'org.json:json:20190722'
     implementation commons_lang3
     implementation 'com.alibaba:fastjson:1.2.60'
-	implementation "com.squareup.okhttp3:okhttp:4.2.1"
+    implementation "com.squareup.okhttp3:okhttp:4.2.1"
     implementation netty_all
-	// 录音
+    // 录音
 //	implementation group: 'org.bytedeco.javacpp-presets', name: 'ffmpeg', version: '4.1-1.4.4'
 //	implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.4'
-	
+
+    // lombok 公用包，简化代码
+    compileOnly lombok
+    annotationProcessor lombok
+    testCompileOnly lombok
+    testAnnotationProcessor lombok
 
     testImplementation('org.springframework.boot:spring-boot-starter-test:2.0.4.RELEASE') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
