--- a/practice/backend/registry-center/registry-center.gradle
+++ b/practice/backend/registry-center/registry-center.gradle
@@ -1,17 +1,24 @@
 plugins {
-	id 'io.spring.dependency-management'
+    id 'java'
+    id 'io.spring.dependency-management'
 }
 
 dependencies {
-	
-	implementation "org.springframework.boot:spring-boot-starter"
-	implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-server"
-	// 解决启动报错 GsonBuilder
-	implementation "com.google.code.gson:gson:2.6"
+
+    implementation "org.springframework.boot:spring-boot-starter"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-server"
+    // 解决启动报错 GsonBuilder
+    implementation "com.google.code.gson:gson:2.6"
+
+    // lombok 公用包，简化代码
+    compileOnly lombok
+    annotationProcessor lombok
+    testCompileOnly lombok
+    testAnnotationProcessor lombok
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
