--- a/practice/backend/resource-service/resource-service.gradle
+++ b/practice/backend/resource-service/resource-service.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
 }
@@ -35,6 +36,11 @@ dependencies {
     implementation persistence_api
     implementation opencsv
 
+    // lombok 公用包，简化代码
+    compileOnly lombok
+    annotationProcessor lombok
+    testCompileOnly lombok
+    testAnnotationProcessor lombok
     testImplementation spring_boot_starter_test
 }
 
