--- a/practice/backend/search-service/search-service.gradle
+++ b/practice/backend/search-service/search-service.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'java'
+}
+
 ext {
     SpringBootVersion = '2.3.11.RELEASE'
 }
@@ -20,5 +24,10 @@ dependencies {
     implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.10.1'
     implementation mysql_connector_java
 
+    // lombok 公用包，简化代码
+    compileOnly lombok
+    annotationProcessor lombok
+    testCompileOnly lombok
+    testAnnotationProcessor lombok
     testImplementation spring_boot_starter_test
 }
