feat: 更新代码结构

--- a/practice/backend/file-service/file-service.gradle
+++ b/practice/backend/file-service/file-service.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(':components:common-web')
+    implementation components_common_web
 
     implementation platform_common
 
