--- a/practice/backend/resource-service/resource-service.gradle
+++ b/practice/backend/resource-service/resource-service.gradle
@@ -15,7 +15,7 @@ configurations {
 }
 
 dependencies {
-    implementation project(':components:common-web')
+    implementation components_common_web
 
     // 公共模块依赖
     implementation platform_common
