--- a/frameworks/mybatis/src/main/resources/database.properties
+++ b/frameworks/mybatis/src/main/resources/database.properties
@@ -1,8 +1,15 @@
 # Mysql
-driver=com.mysql.cj.jdbc.Driver
-driverUrl=jdbc:mysql://localhost:3306/demo_2021?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoRec
+#driver=com.mysql.cj.jdbc.Driver
+#driverUrl=jdbc:mysql://localhost:3306/demo_2021?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoRec
+#username=root
+#password=root
+
+# Oracle
+driver=oracle.jdbc.driver.OracleDriver
+driverUrl=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 username=root
 password=root
+
 
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.driver.url=jdbc:mysql
