--- a/glearn/third-part-jars/third-part-jars.gradle
+++ b/glearn/third-part-jars/third-part-jars.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation mail
 	
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	implementation 'com.opencsv:opencsv:5.5.2'
 	
 	// logback log
 	implementation logback_classic
